--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Character Game</title>
+    <title>3D Model Tester</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="ui">Controls: WASD to Move</div>
+    <div id="container"></div>
+    <div id="ui">
+        <p>Status: <span id="status">Loading...</span></p>
+    </div>
 
     <script type="importmap">
         {
@@ -17,7 +20,6 @@
             }
         }
     </script>
-
     <script type="module" src="main.js"></script>
 </body>
 </html>
